# fates-list-helper

./: .env  .gitignore  Cargo.toml  Makefile  README.md
src/: helpers.rs  main.rs  serverlist.rs  staff.rs
