[package]
name = "fateslisthelper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/kangalioo/poise", branch = "master" }
serde = "1.0.117"
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.79"
serde_repr = "0.1.7"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls" , "postgres", "chrono", "uuid", "bigdecimal", "json"] }
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
base64 = "0.13.0"
http = "0.2.6"
chrono = { version = "0.4.19", features = ["serde"]}
bigdecimal = { version = "0.2.2", features = ["serde"] }
thiserror = "1.0"
rand = "0.8.5"
bristlefrost = { git = "https://github.com/Fates-List/bristlefrost" }

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt", "sync", "time", "rt-multi-thread"]
